iOS/DEPortfolio/www/css/index.css
*, *:link {
  -webkit-tap-highlight-color: transparent;
  /* make transparent link selection, adjust last value opacity 0 to 1.0 */
  list-style: none;
  text-decoration: none;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  -webkit-touch-callout: none;
  /* prevent callout to copy image, etc when tap to hold */
  -webkit-text-size-adjust: none;
  /* prevent webkit from resizing text to fit */
  -webkit-user-select: none;
  /* prevent copy paste, to allow, change 'none' to 'text' */
  width: 100%;
  position: fixed;
  width: 100%;
  height: 100%;
}

body prop{
  -webkit-touch-callout: none;
  /* prevent callout to copy image, etc when tap to hold */
  -webkit-text-size-adjust: none;
  /* prevent webkit from resizing text to fit */
  -webkit-user-select: none;
  /* prevent copy paste, to allow, change 'none' to 'text' */
  width: 100%;
  position: relative;
  width: 100%;
  height: 100%;
}

#view {
  position: absolute;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

header {
  position: fixed;
  top: 0px;
  left: 0px;
  z-index: 1;
  background: #fafafa;
  border-bottom: 1px #e2e2e2 solid;
  width: 100%;
}

header .header_title {
  margin: 22px 30px 17px 30px;
  font-size: 1.2em;
  font-weight: 600;
    text-align: center;
}

header .header_prop_title {
position:relative;
  text-align: center;
/*   border:3px dotted #00FF00; */
  margin: 54px 18px 7px 18px;
  text-align: center;
  font-size: 1.3em;
  font-weight: 600;
  min-height: 30px;
/*   z-index: -1; */
}

footer {
  position: fixed;
  padding-left: 15px;
  bottom: 0px;
  width: 100%;
  height: 60px;
  border-top: 1px solid #e3e3e3;
  background: #fff;
}
footer .left {
  float: left;
  width: 50%;
  height: 100%;
  background: url(../img/douglas_logo.png) no-repeat;
  -webkit-background-size: contain;
/*   background-origin:content-box; */
/*   background-size: contain; */
  background-position: 70% 50%;
}
footer .right {
  float: right;
  width: 50%;
  text-align: right;
  font-size: 1.25em;
  padding: 18px 30px 0px 0px;
}

.body {
  padding: 60px 0px;
  height: 100%;
  overflow-x:hidden;
  overflow-y:scroll;
}
.body a:nth-child(odd) .list_title {
  background: #f2f2f2;
}
.body a:nth-child(even) .list_title {
  background: #fbfbfb;
}


.body .prop{
  -webkit-touch-callout: none;
  /* prevent callout to copy image, etc when tap to hold */
  -webkit-text-size-adjust: none;
  /* prevent webkit from resizing text to fit */
  -webkit-user-select: none;
  /* prevent copy paste, to allow, change 'none' to 'text' */
  width: 100%;
  position: relative;
  float:top;
  width: 100%;
  height: 100%;
}


.list_title {
/*   border:3px dotted #000000; */
  font-size: 1.3em;
  margin: 0px 0px 0px 0px;
  padding: 15px 30px 15px 20px;
  border-bottom: 1px solid #fafafa;
}

.list_title:active {
	font-weight: 600;
}

.flag {
	float: right;
	float: top;
	color: #d0d0d0;
	margin: 0px -10px 5px 0px;
	padding-left: 5px;
}

.slick_carousel {
  float: top;
  position:relative;
  margin-top:42px;
  width: 100%;
  
}
.slick_carousel .slick_carousel_bg {
  width: 100%;
  height: 200px;
}
.slick_carousel .slick_carousel_bg img {
  position:relative;
  height: 100% ;
  width:100%; 
}

.backBtn {
/*   border:1px dotted #000000; */
  position: absolute;
  top: 0px;
  left: 0px;
  padding: 22px 70px 17px 20px;
  color: #1f5fc5;
  font-size: 1.25em;
  cursor: pointer;
}

.backBtn:active {
  font-weight: 600;
  font-size: 1.25em;
}

.favBtn {
/*   border:2px dotted #000000; */
  right: 0px;
  position:absolute;
  float:right;
  z-index: -1;
  float: right;
  margin: 0px 0px 0px 0px;
  padding: 25px 20px 20px 70px;
  color: #98a4b9;
  font-size: 2em;
  cursor: pointer;
}

.faved {
  color: #a81823 !important;
}

#share_form {
  padding: 20px 20px;
}

#share_form input[type=text] {
  width:95%;
  text-align: center;
  font-size: 1.3em;
}

#share_form input[type=email] {
  width:95%;
  text-align: center;
  font-size: 1.3em;
}

#share_form input[type=submit] {
/*   padding:50px 50px 50px 50px;  */
	margin:20 auto;
	margin-bottom:10px;
	margin-left:10%;
	width: 210px;
	height:50px;
	font-size: 1.0em;
	background:#ccc; 
	border:0 none;
}
.prop_info {
  padding: 20px;
}

#fav_list label{
  padding: 12px 20px 0px 20px;
  font-size: 0.9em;
  min-height:40px;
  background: #fbfbfb;
}
#fav_list {
  border-bottom: 1px solid #ccc;
  }

#fav_list li:nth-child(even) {
  background: #f2f2f2;
}
#fav_list li:nth-child(odd) {
  background: #fbfbfb;
}

.fav_item {
/*   border:1px dotted #0000FF; */
  font-size: 1.0em;
  margin: 0px 0px 0px 0px;
  padding: 15px 25px 15px 20px;
  border-bottom: 1px solid #fafafa;
}
.fav_delete {
/*   border:1px dotted #000000; */
  margin:-8px -15px 0px 0px;
  padding-top: 5px;
  min-height: 40px;
  float: right;
  font-size: 2.5em;
  font-weight: 600;
  color:#a81823;
}

.fav_delete:active {
	color: #000000;
}

.shareBtn {
	padding: 15px 0px 20px 10px;
/* 	  border:2px dotted #000000; */
}

.aboutBtn {
	padding: 15px 10px 20px 0px;
	margin: 0px -15px 0px 0px;
/* 	  border:2px dotted #000000; */
}
.shareBtn:active {
	font-weight: 600;
}

.aboutBtn:active {
	font-weight: 600;
}

.about_body p{
	margin:10px 5px 10px 2px;
	padding: 10px 20px;
	text-align: left;
}

